# NBA_Bets_Kansas_St

./: Procfile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
NBA_Bet_Kansas_St/: asgi.py  settings.py  urls.py  wsgi.py
better/: apirequests.py  models.py  scores.py  urls.py  views.py
better/migrations/: 0001_initial.py  0002_auto_20211021_1852.py  0003_alter_teams_name.py  0004_alter_teams_data.py
better/templates/better/: detail.html  new_better.html  test.html
timer/: models.py
timer/migrations/: 0001_initial.py
website/: admin.py  views.py
website/static/website/: style.css
website/templates/: base.html
website/templates/website/: home.html
