[tool.poetry]
name = "nba-bets-kansas-st"
version = "0.1.0"
description = ""
authors = ["Tommy Kebschull <tommykebschull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.6"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
asgiref = "3.4.1"
certifi = "2021.5.30"
charset-normalizer = "2.0.4"
gunicorn = "20.1.0"
idna = "3.2"
numpy = "1.21.1"
pandas = "1.3.1"
psycopg2 = "2.9.1"
python-dateutil = "2.8.2"
pytz = "2021.1"
requests = "2.26.0"
six = "1.16.0"
sqlparse = "0.4.1"
urllib3 = "1.26.6"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
